[tool.poetry]
name = "mpc2c"
version = "0.1.0"
description = ""
authors = ["Federico Simonetta <federico.simonetta@unimi.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.6"
Cython = "^0.29.21"
numpy = "^1.19.4"
tqdm = "^4.52.0"
joblib = "^0.17.0"
pretty_midi = "^0.2.9"
essentia = "^2.1b6.dev184"
visdom = "^0.1.8"
plotly = "^4.12.0"
torch = "^1.7.0"
# TODO: change this when this branch is merged!
scikit-optimize = {git = "https://github.com/kernc/scikit-optimize.git", branch="space_constraint"}
jack-client = "^0.5.2"
pysoundfile = "^0.9.0"
PyQt5 = "^5.15.2"
sounddevice = "^0.4.1"
mido = "^1.2.9"
python-rtmidi = "^1.4.6"
pandas = "^1.2.1"
matplotlib = "^3.3.4"
dash = "^1.19.0"
kaleido = "0.1.0"

[tool.poetry.dev-dependencies]
jedi = "<0.18.0"
ipdb = "^0.13.4"
pydeps = "^1.9.13"
wily = "^1.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
